Move ContainersGenerator to a separate module. Add a gradle task to generate containers